--- a/styles.css
+++ b/styles.css
@@ -6147,6 +6147,19 @@ input[type="file"] {
   .tsw .trusted-title-w::before{
     width: 430px;
   }
+  .animated-section h2 > span:first-child::before{
+    width: 470px;
+  }
+  .animated-section h2 >span:first-child::after {
+    width: 480px;
+    height: 1405px;
+  }
+  .team-section-mno h2::before{
+    height: 585px;
+    right: -445px;
+    width: 460px;
+  }
+  
 }
 @media (max-width:1330px){  
   .text-dark-blue::after {
@@ -6192,6 +6205,27 @@ input[type="file"] {
   .tsw::before{
     display: none;
   }
+  /* .mobile-nav-toggle{
+    display: none;
+  } */
+  .animated-section h2 >span:first-child::after,
+  .animated-section h2 >span:first-child::before{
+    display: none;
+  }
+  .team-section-mno h2::before{
+    display: none;
+  }  
+}
+@media  (max-width:1100px) {
+  .header .navmenu ul{
+    gap: 1rem;
+  }
+  .header{
+    padding: 1rem 2rem;
+  }
+  
+}
+@media  (min-width:993px) {
   .mobile-nav-toggle{
     display: none;
   }
